--- a/tutoria/app_inicial/templates/registration/oferta_list.html
+++ b/tutoria/app_inicial/templates/registration/oferta_list.html
@@ -24,23 +24,16 @@
 
     </div>
 
-      <div class="menu list-group-flus">
+    <div class="menu list-group-flus">
 
-        <a href="" class="list-group-item list-group-item-action bg-light p-3">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-post" viewBox="0 0 16 16">
-            <path d="M4 3.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5v-8z"/>
-            <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"/>
-          </svg>
-        Mis Posts</a>
-        <a href="" class="list-group-item list-group-item-action bg-light p-3">
+        <a href="{% url 'crear_oferta' %}" class="list-group-item list-group-item-action bg-light p-3">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-balloon-heart" viewBox="0 0 16 16">
           <path fill-rule="evenodd" d="m8 2.42-.717-.737c-1.13-1.161-3.243-.777-4.01.72-.35.685-.451 1.707.236 3.062C4.16 6.753 5.52 8.32 8 10.042c2.479-1.723 3.839-3.29 4.491-4.577.687-1.355.587-2.377.236-3.061-.767-1.498-2.88-1.882-4.01-.721L8 2.42Zm-.49 8.5c-10.78-7.44-3-13.155.359-10.063.045.041.089.084.132.129.043-.045.087-.088.132-.129 3.36-3.092 11.137 2.624.357 10.063l.235.468a.25.25 0 1 1-.448.224l-.008-.017c.008.11.02.202.037.29.054.27.161.488.419 1.003.288.578.235 1.15.076 1.629-.157.469-.422.867-.588 1.115l-.004.007a.25.25 0 1 1-.416-.278c.168-.252.4-.6.533-1.003.133-.396.163-.824-.049-1.246l-.013-.028c-.24-.48-.38-.758-.448-1.102a3.177 3.177 0 0 1-.052-.45l-.04.08a.25.25 0 1 1-.447-.224l.235-.468ZM6.013 2.06c-.649-.18-1.483.083-1.85.798-.131.258-.245.689-.08 1.335.063.244.414.198.487-.043.21-.697.627-1.447 1.359-1.692.217-.073.304-.337.084-.398Z"/>
         </svg>
-        Mis Favoritos</a>
+        Crear oferta </a>
 
 
       </div>
-
 
     </div>
   
@@ -94,80 +87,51 @@
                                         </p>
                                       </div>
                                     </nav>
-
-                                    {% block content %}
-                                    {% if user.is_authenticated %} 
-                                    <section class="vh-100" >
-                                     <div class="container py-5 h-100">
-                                       <div class="row d-flex justify-content-center align-items-center h-100">
-                                         <div class="col col-lg-6 mb-4 mb-lg-0">
-                                           <div class="card mb-3" style="border-radius: .5rem;">
-                                             <div class="row g-0">
-                                               <div class="col-md-4 gradient-custom text-center text-white"
-                                                 style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
-                                                 <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
-                                                   alt="Avatar" class="img-fluid my-5" style="width: 150px;" />
-                                                   
-                                                   <a class="btn btn-success" href="{% url 'profile' %}" role="button">Guardar Cambios</a>
-                                               </div>
-                                               <div class="col-md-8">
-                                                 <div class="card-body">
-                                                   <h6>Información</h6>
-                                                   <hr class="mt-0 mb-4">
-
-                                                   <div class="row pt-1">
-
-                                                    <div class="col-6 mb-3">
-                                                      <h6>Nombre</h6>
-                                                      <div class="inputs"> <input class="form-control" type="text" placeholder="Nombre"> </div>
-                                                    </div>
-
-                                                    
-                                                     <div class="col-6 mb-3">
-                                                       <h6>Email</h6>
-                                                       <p class="text-muted"> {{user.email}} </p>
-                                                     </div>
-
-                                                    
-                                                   </div> 
-                                                   
-                                                   <div class="row pt-1">   
-                                                     <div class="col-6 mb-3">
-                                                       <h6>Teléfono</h6>
-                                                       <div class="inputs"> <input class="form-control" type="text" placeholder="Teléfono"> </div>
-                                                     </div>
-                                                   </div>
-
-                                                   <h6>Sobre mi</h6>
-                                                   <hr class="mt-0 mb-4">
-                                                   <div class="row pt-1">
-                                                     <div class="col-6 mb-3">
-                                                        <div class="inputs"> <input class="form-control" type="text" placeholder="Descripción"> </div>
-                                                     </div>
-                                                    
-                                                   </div>
-                                                   
-                                                 </div>
-                                               </div>
-                                             </div>
-                                           </div>
-                                         </div>
-                                       </div>
-                                     </div>
-                                   </section>
-                               
                                     
-                                     {% else %}
-                                     <p> Registrate para ver tus detalles </p>
-                                     {% endif %}
-                               
-                                    {% endblock %}
-                               
+                             +
+                             
+                             
+                             <div class="row justify-content-center">
+                                <div class="card" style="width: 30rem;">
+                                  
+
+<h3>Información guardada: <h3>
+        
+
+    <table class="table">
+        <tr>
+            <td><strong>Nombre tutor :</strong></td>
+            <td>{{ oferta_a.nameTutor }}</td>
+          </tr>
+          <tr>
+            <td><strong>Titlo oferta:</strong></td>
+            <td>{{ oferta_a.titulo }}</td>
+          </tr>
+        
+        <tr>
+        <tr>
+            <td><strong>Materia:</strong></td>
+            <td>{{ oferta_a.materia }}</td>
+          </tr>
+    
+        <tr>
+            <td><strong>Contacto:</strong></td>
+            <td>{{ oferta_a.contacto }}</td>
+          </tr>
+
+        <tr>
+            <td><strong>Descripcion:</strong></td>
+            <td>{{ oferta_a.descripcion }}</td>
+        </tr>
+        
+    </table>
                                
                                
                                
                                       
   </div>
+</div>
+</div>
                            
 
     
@@ -182,3 +146,10 @@
 </html>
   
   
+  
+
+
+  
+
+
+
